public interface CommandProcessor {
    void executeCommand(String[] userInputCommand);
}
