package canvas;

import commands.Command;

public interface Canvas {

    void render(Command command);

}
