@startuml

title __ASCII-DRAWING's Class Diagram__\n

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    namespace pp {
      class CommandFactory {
      }
    }
  }
  

  namespace  {
    namespace pp {
      interface CommandProcessor {
      }
    }
  }
  

  namespace  {
    namespace pp {
      class UserCommandProcessor {
      }
    }
  }
  

  namespace  {
    namespace anvas {
      class canvas.AsciiCanvas {
      }
    }
  }
  

  namespace  {
    namespace anvas {
      interface canvas.Canvas {
      }
    }
  }
  

  namespace  {
    namespace ommands {
      abstract class commands.AbstractCommand {
      }
    }
  }
  

  namespace  {
    namespace ommands {
      interface commands.Command {
      }
    }
  }
  

  namespace  {
    namespace ommands {
      class commands.CreateCommand {
      }
    }
  }
  

  namespace  {
    namespace ommands {
      class commands.LineCommand {
      }
    }
  }
  

  namespace  {
    namespace ommands {
      class commands.QuitCommand {
      }
    }
  }
  

  namespace  {
    namespace ommands {
      class commands.RectangleCommand {
      }
    }
  }
  

  namespace  {
    namespace odel {
      enum CommandType {
      }
    }
  }
  

  namespace  {
    namespace tils {
      class utils.CharacterPrinter {
      }
    }
  }
  

  UserCommandProcessor .up.|> CommandProcessor
  UserCommandProcessor o-- canvas.Canvas : canvas
  canvas.AsciiCanvas .up.|> canvas.Canvas
  canvas.AsciiCanvas o-- utils.CharacterPrinter : characterPrinter
  commands.AbstractCommand .up.|> commands.Command
  commands.CreateCommand -up-|> commands.AbstractCommand
  commands.LineCommand -up-|> commands.AbstractCommand
  commands.QuitCommand -up-|> commands.AbstractCommand
  commands.RectangleCommand -up-|> commands.AbstractCommand


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
